Allow JNI loading during unit tests
On Java 24+ the use of Netty in JUnit tests emits a nasty warning, add
the corresponding allow line.

JIRA: ODLPARENT-350
Change-Id: Ia7f4df8963d97fc0189f214fbddb410d9fc52665
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>